--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,15 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
+    <header class="header py-4">
+      <div class="top">みんなでたのしく鬱診断！</div>
+    </header>
+
     <%= yield %>
+
+    <footer class="fixed-bottom py-4">
+      利用規約・プライバシーポリシー
+    </footer>
   </body>
 </html>
