[update]add button link

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -4,27 +4,28 @@
   h2
     | きのこで楽しく鬱診断！
   .mb-5.mt-5
-    button
-      | 診断する
+
+    = button_to "診断する", '/', class: 'button'
+
   div
     h2
       span.marker
-        |  まずきのこって何者？ 
+        |  まずきのこって何者？
   .mt-4
     p
       | 菌類で分類学上はカビに近い仲間。
     p
       | 実は、きのこの本体は菌糸っていうカビみたいなやつなんだって。
     p
-      |  みんながきのこの本体だと思ってるのは、実は胞子をつくるための場所なんだって〜 
+      |  みんながきのこの本体だと思ってるのは、実は胞子をつくるための場所なんだって〜
     p
       | 知らなかった〜
     p
-      |  あるタイミングで菌糸がしゅうご〜う！ってなって、目で見えるようになったものらしい〜 
+      |  あるタイミングで菌糸がしゅうご〜う！ってなって、目で見えるようになったものらしい〜
     p
       | へぇ〜って感じだよね〜。
     p
-      |  日本には大体5000種類くらいのきのこがあるらしいけど、実際のとこわかんないんだって。 
+      |  日本には大体5000種類くらいのきのこがあるらしいけど、実際のとこわかんないんだって。
     p
       | 可能性無限大〜
     p
@@ -32,10 +33,14 @@
     p
       | 食べたらやばい系は約200種らしい〜
     p
-      |  それってほとんど分かってないし、ほぼ毒きのこじゃ〜んって感じよね。 
+      |  それってほとんど分かってないし、ほぼ毒きのこじゃ〜んって感じよね。
     p
       | ま、よくわかんないけど！
     p
       | ちな、このサイトを見ました〜
     a[href="https://www.fukushihoken.metro.tokyo.lg.jp/shokuhin/kinoko/kiso.html"]
       | キノコの基礎知識
+
+
+
+
