--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,9 +9,10 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    header.header.py-4
-      .top
-        | みんなでたのしく鬱診断！
-    = yield
-    footer.fixed-bottom.py-4
-      |  利用規約・プライバシーポリシー 
+    #wrapper
+      header.header.py-4
+        .top
+          | みんなでたのしく鬱診断！
+      = yield
+      footer.fixed-bottom.py-4
+        |  利用規約・プライバシーポリシー
