--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,17 +1,4 @@
-body {
-  font-family: "Chalkduster", "Wawati SC", sans-serif;
-  background-color: #fffafa;
-  text-align: center;
-  height: auto;
-}
-
-header,
-footer {
-  background-color: black;
-  color: white;
-}
-
-button {
+.button {
   font-size: 5em;
   font-family: "Chalkduster", "Wawati SC", sans-serif;
   background-color: #2e8b57;
