--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -5,7 +5,7 @@
     | きのこで楽しく鬱診断！
   .mb-5.mt-5
 
-    = button_to "診断する", '/', class: 'button'
+    = button_to "診断する", results_index_path, method: :get, class: 'button'
 
   div
     h2
