--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@
  */
 $backcolor: #f5f5f5;
 
-.bodystyle {
+html body {
   background-color: $backcolor;
   font-family: "Chalkduster", "Wawati SC", sans-serif;
   text-align: center;
@@ -26,4 +26,9 @@ header,
 footer {
   background-color: black;
   color: white;
+}
+
+#wrapper {
+  margin-top: 3em;
+  margin-bottom: 10em;
 }
