--- a/app/assets/stylesheets/results.scss
+++ b/app/assets/stylesheets/results.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the results controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.img {
+  width: 50%;
+  height: 50%;
+}
+
+.card {
+  margin: 0 auto;
+}
