--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,48 +1,57 @@
-.container-fluid
-  h1.mt-5
-    | あなたはどのきのこ？
-  h2
-    | きのこで楽しく鬱診断！
-  .mb-5.mt-5
+.container
+  .balloons
+    div
+    div
+    div
+    div
+    div
 
-    / = button_to "診断する", results_index_path, method: :get, class: 'button'
-    = form_with url: results_index_path, method: :get, local: true do |f|
-      = f.text_field :user
-      = f.submit '診断する'
-
-  div
+  .container-fluid
+    h1.mt-5
+      | あなたはどのきのこ？
     h2
-      span.marker
-        |  まずきのこって何者？
-  .mt-4
-    p
-      | 菌類で分類学上はカビに近い仲間。
-    p
-      | 実は、きのこの本体は菌糸っていうカビみたいなやつなんだって。
-    p
-      |  みんながきのこの本体だと思ってるのは、実は胞子をつくるための場所なんだって〜
-    p
-      | 知らなかった〜
-    p
-      |  あるタイミングで菌糸がしゅうご〜う！ってなって、目で見えるようになったものらしい〜
-    p
-      | へぇ〜って感じだよね〜。
-    p
-      |  日本には大体5000種類くらいのきのこがあるらしいけど、実際のとこわかんないんだって。
-    p
-      | 可能性無限大〜
-    p
-      | 日本に生えてるきのこでわかってるだけでも食べれるのは約100種、
-    p
-      | 食べたらやばい系は約200種らしい〜
-    p
-      |  それってほとんど分かってないし、ほぼ毒きのこじゃ〜んって感じよね。
-    p
-      | ま、よくわかんないけど！
-    p
-      | ちな、このサイトを見ました〜
-    a[href="https://www.fukushihoken.metro.tokyo.lg.jp/shokuhin/kinoko/kiso.html"]
-      | キノコの基礎知識
+      | きのこで楽しく鬱診断！
+    .mb-5.mt-5
+
+      / = button_to "診断する", results_index_path, method: :get, class: 'button'
+      = form_with url: results_index_path, method: :get, local: true do |f|
+        = f.text_field :user
+        = f.submit '診断する'
+
+    div
+      h2
+        span.marker
+          |  まずきのこって何者？
+    .mt-4
+      p
+        | 菌類で分類学上はカビに近い仲間。
+      p
+        | 実は、きのこの本体は菌糸っていうカビみたいなやつなんだって。
+      p
+        |  みんながきのこの本体だと思ってるのは、実は胞子をつくるための場所なんだって〜
+      p
+        | 知らなかった〜
+      p
+        |  あるタイミングで菌糸がしゅうご〜う！ってなって、目で見えるようになったものらしい〜
+      p
+        | へぇ〜って感じだよね〜。
+      p
+        |  日本には大体5000種類くらいのきのこがあるらしいけど、実際のとこわかんないんだって。
+      p
+        | 可能性無限大〜
+      p
+        | 日本に生えてるきのこでわかってるだけでも食べれるのは約100種、
+      p
+        | 食べたらやばい系は約200種らしい〜
+      p
+        |  それってほとんど分かってないし、ほぼ毒きのこじゃ〜んって感じよね。
+      p
+        | ま、よくわかんないけど！
+      p
+        | ちな、このサイトを見ました〜
+      a[href="https://www.fukushihoken.metro.tokyo.lg.jp/shokuhin/kinoko/kiso.html"]
+        | キノコの基礎知識
+      p
 
 
 
