--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require_self
  */
+
 $backcolor: #f5f5f5;
 
 html body {
@@ -29,6 +30,5 @@ footer {
 }
 
 #wrapper {
-  margin-top: 3em;
-  margin-bottom: 10em;
+  margin: 0;
 }
