--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,7 +7,6 @@ html
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
     header.py-4
@@ -18,4 +17,7 @@ html
       = yield
       
     footer.py-4
-      |  利用規約・プライバシーポリシー
+      = render template: 'shared/_privacy_policy'
+      |・
+      .purapo 
+      = render template: 'shared/_terms_of_use'
