--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,13 @@ html
     title
       | Kinoko2
     meta[name="viewport" content="width=device-width,initial-scale=1"]
+    meta content="summary" name="twitter:card" /
+    meta content="@meiboo_net" name="twitter:site" /
+    meta content="https://www.meiboo.net/" property="og:url" /
+    meta content="オンライン名簿アプリ「MEIBOO」" property="og:title" /
+    meta content="脳の外部化を通して、情報化社会への適応を支援します。" property="og:description" /
+    meta content="https://www.meiboo.net/assets/ai_nakayoshi-e82329a2a52eaeb34fc327f76d0708f014c099bd35ec98caa4cb5e05a6bb958f.png" property="og:image" /
+    meta content="width=device-width, initial-scale=1" name="viewport" /
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
