--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,16 +1,15 @@
 doctype html
 html
   head
-    title
-      | Kinoko2
+    title kinoko
+    meta content="kinoko2" property="og:title"
+    meta content="website" property="og:type"
+    meta content="https://kinokoshindan.herokuapp.com/" property="og:url"
+    meta content="https://i.gyazo.com/15d8d859793990416aa950c136b3ed18.png" property="og:image"
+    meta content="kinoko" property="og:site_name"
+    meta content="kinoko" property="og:description"
+    meta content="summary" name="twitter:card"
     meta[name="viewport" content="width=device-width,initial-scale=1"]
-    meta content="summary" name="twitter:card" /
-    meta content="@meiboo_net" name="twitter:site" /
-    meta content="https://www.meiboo.net/" property="og:url" /
-    meta content="オンライン名簿アプリ「MEIBOO」" property="og:title" /
-    meta content="脳の外部化を通して、情報化社会への適応を支援します。" property="og:description" /
-    meta content="https://www.meiboo.net/assets/ai_nakayoshi-e82329a2a52eaeb34fc327f76d0708f014c099bd35ec98caa4cb5e05a6bb958f.png" property="og:image" /
-    meta content="width=device-width, initial-scale=1" name="viewport" /
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
