--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -1,26 +1,28 @@
+= stylesheet_pack_tag 'result/index.scss'
+
 h1
   | あなたは
   = @result.name
   | な状態です。
 
 .img-fluid
-  = image_tag @result.image, class: "img-thumbnail w-50"
+  = image_pack_tag @result.image, class: "img-thumbnail w-50"
 
 h2
   | 特性：
   = @result.feature
 
-.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded
+.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded.mx-auto
   .card-body
     .type
       | #{@result.name}タイプ
     = simple_format @result.contents, class: "card-text"
 
-.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded
+.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded.mx-auto
   .card-bodys
     = simple_format @result.description, class: "card-text"
 
-.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded
+.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded.mx-auto
   .card-bodys
     = simple_format @wise_saying.first.person, class: "card-text"
     = simple_format @wise_saying.first.description, class: "card-text"
