--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,5 +1,3 @@
-= stylesheet_pack_tag 'top'
-
 .container
   .balloons
     div
@@ -15,6 +13,7 @@
       | きのこで楽しく鬱診断！
     .mb-5.mt-5
 
+      = h(flash[:danger]) 
       / = button_to "診断する", results_index_path, method: :get, class: 'button'
       = form_with url: results_index_path, method: :get, local: true do |f|
         p 
