--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -30,4 +30,4 @@ h2
     = simple_format @wise_saying.second.person, class: "card-text"
     = simple_format @wise_saying.second.description, class: "card-text"
 
-= link_to 'twitter', @share, target: '_blank', rel: 'noreferrer'
+/ = link_to 'twitter', @share, target: '_blank', rel: 'noreferrer'
