--- a/app/javascript/stylesheets/result/index.scss
+++ b/app/javascript/stylesheets/result/index.scss
@@ -10,3 +10,15 @@
 .card {
   margin: 0 auto;
 }
+
+// .result_title {
+//   margin: 30px;
+// }
+
+// .result_title span {
+//   font-size: 30px;
+// }
+
+// .result_title .kinoko_name {
+//   font-size: 50px;
+// }
