--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,13 +2,12 @@ doctype html
 html
   head
     title kinoko
-    meta content="kinoko2" property="og:title"
-    meta content="website" property="og:type"
-    meta content="https://kinokoshindan.herokuapp.com/" property="og:url"
-    meta content="https://i.gyazo.com/15d8d859793990416aa950c136b3ed18.png" property="og:image"
-    meta content="kinoko" property="og:site_name"
-    meta content="kinoko" property="og:description"
-    meta content="summary" name="twitter:card"
+    meta name="twitter:card" content="summary"
+    meta name="twitter:site" content="@wiwiwi20d"
+    meta property="og:url" content="https://kinokoshindan.herokuapp.com/"
+    meta property="og:title" content="kinoko"
+    meta property="og:description" content="記事の要約（ディスクリプション）"
+    meta property="og:image" content="https://i.gyazo.com/15d8d859793990416aa950c136b3ed18.png"
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
