--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,7 @@ html
     meta property="og:url" content="https://kinokoshindan.herokuapp.com/"
     meta property="og:title" content="きのこネガティブ診断"
     meta property="og:description" content="直近のツイートのネガティブ度をきのこで判定！"
+    meta property="og:image" content="https://kinokoshindan.herokuapp.com/packs/media/images/shirotamagotengutake-49f131d360d889ef857590b41043c7e4.png"
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     = csrf_meta_tags
     = csp_meta_tag
