--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,6 +9,9 @@ html
     meta property="og:description" content="直近のツイートのネガティブ度をきのこで判定！"
     meta property="og:image" content="https://kinokoshindan.herokuapp.com/packs/media/images/shirotamagotengutake-49f131d360d889ef857590b41043c7e4.png"
     meta[name="viewport" content="width=device-width,initial-scale=1"]
+    script crossorigin="anonymous" src="https://cdn.lr-ingest.io/LogRocket.min.js" 
+    javascript:
+      window.LogRocket && window.LogRocket.init('tmai4r/kinoko');
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
