--- a/app/views/results/_wise_saying.html.slim
+++ b/app/views/results/_wise_saying.html.slim
@@ -1,4 +1,2 @@
-.wise_saying_description
-  = wise_saying.description
-.wise_saying_person
-  = wise_saying.person
+p = wise_saying.description
+p = wise_saying.person
