--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -1,31 +1,36 @@
-
 .result_title
   span #{@user}さんは
-  .kinoko_name #{@result.name}
+  .kinoko_name 
+    span #{@result.name}
   span な状態です。
 
 .img-fluid
   = image_pack_tag @result.image, class: "img-thumbnail w-50"
 
-h2 特性：#{@result.feature}
-
-.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded.mx-auto
+.sub_result_title
+  .feature #{@result.feature}
+  .type #{@result.name}タイプ
+  .level ネガティブレベル：#{@result.level}
+  
+.card.col-md-9.shadow.p-3.mb-5.bg-white.rounded.mx-auto
   .card-body
-    .type
-      | #{@result.name}タイプ
-      | ネガティブレベル：#{@result.level}
-    = simple_format @result.contents, class: "card-text"
+    .card-text
+      = simple_format @result.contents
 
-.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded.mx-auto
-  .card-bodys
-    = simple_format @result.description, class: "card-text"
+.card.col-md-9.shadow.p-3.mb-5.bg-white.rounded.mx-auto
+  .card-body
+    span.title.marker どんなきのこ？
+    .card-text
+      = simple_format @result.description
 
-.card.col-md-6.shadow.p-3.mb-5.bg-white.rounded.mx-auto
-  .card-bodys
-    = simple_format @wise_saying.first.person, class: "card-text"
-    = simple_format @wise_saying.first.description, class: "card-text"
-    |
-    = simple_format @wise_saying.second.person, class: "card-text"
-    = simple_format @wise_saying.second.description, class: "card-text"
+.card.col-md-9.shadow.p-3.mb-5.bg-white.rounded.mx-auto
+  .card-body
+    span.title.marker そんなあなたに送る名言
+    .card-text
+      = render partial: 'wise_saying', collection: @wise_sayings
 
-= link_to 'twitter', @share, target: '_blank', rel: 'noreferrer'
+.twitter_share
+  = link_to @share, target: '_blank', rel: 'noreferrer' do 
+    i class="fab fa-twitter"
+    | 結果をツイートする
+  
