[update]change font size, $title_text, $sub_title_text, $text

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "shared/privacy_policy";
 @import "shared/terms_of_use";
+@import "shared/inquiry";
 
 $backcolor: #f5f5f5;
 $title_text: clamp(25px, 50px, 6vw);
