--- a/app/javascript/stylesheets/result/index.scss
+++ b/app/javascript/stylesheets/result/index.scss
@@ -1,7 +1,3 @@
-// Place all the styles related to the results controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
-
 .img {
   width: 50%;
   height: 50%;
@@ -11,43 +7,45 @@
   margin: 0 auto;
 }
 
-.feature,
-.type,
-.level {
-  font-size: clamp(20px, 2vw, 3vw);
-}
-
 .result_title {
   margin: 30px;
 }
 
+// 結果
 .result_title span {
-  font-size: clamp(15px, 2vw, 3vw);
+  font-size: $sub_title_text;
 }
 
+// 結果のきのこ名
 .result_title .kinoko_name span {
-  font-size: clamp(25px, 6vw, 7vw);
-  font: bold;
+  font-size: $title_text;
   background: linear-gradient(transparent 65%, #ffc7af 0%);
   width: auto;
 }
 
+// サブタイトル囲み
 .sub_result_title {
   margin: 15px 0;
+}
+
+.feature,
+.type,
+.level {
+  font-size: $sub_title_text;
 }
 
 .card-body span.title.marker {
   background: linear-gradient(transparent 65%, #bad3ff 0%);
   width: auto;
-  font-size: clamp(20px, 30px, 5vw);
+  font-size: $sub_title_text;
 }
 
 .card-text * {
   margin-top: 1em;
-  font-size: clamp(15px, 20px, 4vw);
+  font-size: $text;
 }
 
 .twitter_share {
-  font-size: clamp(15px, 20px, 4vw);
+  font-size: $text;
   margin: 1em;
 }
