--- a/app/javascript/stylesheets/top/index.scss
+++ b/app/javascript/stylesheets/top/index.scss
@@ -18,7 +18,7 @@
 }
 
 p.mt-5 {
-  font-size: clamp(25px, 50px, 6vw);
+  font-size: $title_text;
 }
 
 .marker {
@@ -27,10 +27,10 @@ p.mt-5 {
 }
 
 div h2 span.marker {
-  font-size: clamp(20px, 35px, 6vw);
+  font-size: $sub_title_text;
 }
 
 .mt-4 p {
   margin-top: 1em;
-  font-size: clamp(15px, 20px, 4vw);
+  font-size: $text;
 }
