--- a/app/javascript/stylesheets/top/_balloon.scss
+++ b/app/javascript/stylesheets/top/_balloon.scss
@@ -2,6 +2,7 @@
 $ballonimage: url(../images/kinoko.png);
 $animation_x: wobbling_x 0.8s ease-in-out infinite alternate,
   wobbling_y 1.1s ease-in-out infinite alternate;
+$image_size: clamp(100px, 200px, 20vw);
 
 .container {
   position: relative;
@@ -14,8 +15,8 @@ $animation_x: wobbling_x 0.8s ease-in-out infinite alternate,
 .balloons div {
   position: absolute;
   bottom: -15%;
-  width: 100px;
-  height: 100px;
+  width: $image_size;
+  height: $image_size;
   background-image: $ballonimage;
   background-size: cover;
 }
@@ -79,7 +80,7 @@ $animation_x: wobbling_x 0.8s ease-in-out infinite alternate,
     transform: translateY(-2000px);
   }
 }
-/* 
+/*
 http://www.htmq.com/css3/transition-timing-function.shtml
 ease-in-out：cubic-bezier(0.42, 0, 0.58, 1.0) を指定したのと同じ（ゆっくり始まってゆっくり終わる）
 
