[update]add description for input area

--- a/app/javascript/stylesheets/top/index.scss
+++ b/app/javascript/stylesheets/top/index.scss
@@ -21,6 +21,10 @@ p.mt-5 {
   font-size: $title_text;
 }
 
+.mb-5.mt-5 {
+  font-size: $text;
+}
+
 .marker {
   background: linear-gradient(transparent 65%, #bad3ff 0%);
   width: auto;
