[update]add page title for error page

--- a/app/views/errors/error_404.html.slim
+++ b/app/views/errors/error_404.html.slim
@@ -1,7 +1,9 @@
+- content_for(:title, '404エラー')
+
 .error
   .error_title
     | 404 Not Found
   .error_discription
     | お探しのページは見つかりませんでした
 
-  
+
