--- a/app/views/errors/error_500.html.slim
+++ b/app/views/errors/error_500.html.slim
@@ -1,7 +1,9 @@
+- content_for(:title, '500エラー')
+
 .error
   .error_title
     | 500 Internal Server Error
   .error_discription
     | アクセスしようとしたページは表示できませんでした。
 
-  
+
