--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,6 +1,7 @@
-.privacy_policy
-  = render template: 'shared/_privacy_policy'
-.terms_of_use
-  = render template: 'shared/_terms_of_use'
-.inquirey
-  = render template: 'shared/_inquiry'
+.footer_box
+  .privacy_policy
+    = render template: 'shared/_privacy_policy'
+  .terms_of_use
+    = render template: 'shared/_terms_of_use'
+  .inquirey
+    = render template: 'shared/_inquiry'
