--- a/app/views/errors/error_500.html.slim
+++ b/app/views/errors/error_500.html.slim
@@ -6,4 +6,7 @@
   .error_discription
     | アクセスしようとしたページは表示できませんでした。
 
-
+.return_link
+  = link_to root_path do
+    i class="fas fa-door-open"
+    | トップページに戻る
