--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -9,7 +9,16 @@
     div
 
   .container-fluid
-    p.mt-5 あなたはどのきのこ？<br>きのこでネガティブ診断！
+    p.mt-5 あなたはどのきのこ？<br>きのこネガティブ診断！
+
+    p
+     a.dropdown-toggle.play_link aria-controls="collapse" aria-expanded="false" data-bs-toggle="collapse" href="#collapse" role="button" 
+      | きのこネガティブ診断について 
+    #collapse.collapse
+      p 直近ツイートのネガティブを測定し、10段階で評価！
+      p level1がスーパーポジティブ、level10がスーパーネガティブ！
+      p あなたのlevelはどのくらいかな？
+
     .mb-5.mt-5
       - if flash.present?
         = h(flash[:danger])
