--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -30,7 +30,7 @@
         p
           = check_box_tag :check, '1'
           = label_tag :check, '利用規約に同意する'
-        p = f.submit '診断する', class: 'button', id: 'submit', disable_with: '診断中...', style: 'display: none;
+        p = f.submit '診断する', class: 'button', id: 'submit', disable_with: '診断中...', style: 'display: none;'
 
     div
       h2
