--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,17 +10,18 @@ html
     meta property="og:image" content="https://kinokoshindan.herokuapp.com/packs/media/images/shirotamagotengutake-49f131d360d889ef857590b41043c7e4.png"
     meta[name="viewport" content="width=device-width,initial-scale=1"]
 
-    script crossorigin="anonymous" src="https://cdn.lr-ingest.io/LogRocket.min.js"
-    javascript:
-      window.LogRocket && window.LogRocket.init('tmai4r/kinoko');
+    - if Rails.env.development?
+      script crossorigin="anonymous" src="https://cdn.lr-ingest.io/LogRocket.min.js"
+      javascript:
+        window.LogRocket && window.LogRocket.init('tmai4r/kinoko');
 
-    script async="" src="https://www.googletagmanager.com/gtag/js?id=G-5FMGPEDX64"
-    javascript:
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+      script async="" src="https://www.googletagmanager.com/gtag/js?id=G-5FMGPEDX64"
+      javascript:
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-      gtag('config', 'G-5FMGPEDX64');
+        gtag('config', 'G-5FMGPEDX64');
 
     = csrf_meta_tags
     = csp_meta_tag
