--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -33,7 +33,7 @@ main {
 
 footer {
   @include header_footer_common;
-  z-index: 100;
+  // z-index: 100;
   // padding-bottom: 15vh; //←footerの高さ/
   box-sizing: border-box;
   bottom: 0;
