--- a/app/views/shared/_privacy_policy.html.slim
+++ b/app/views/shared/_privacy_policy.html.slim
@@ -3,90 +3,53 @@ a#privacy_policy data-bs-target="#staticBackdrop" data-bs-toggle="modal" type="b
   | プライバシーポリシー
 /! Modal
 #staticBackdrop.modal.fade aria-hidden="true" aria-labelledby="staticBackdropLabel" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-  .modal-dialog.modal-xl
+  .modal-dialog.modal-dialog-scrollable.modal-xl
     .modal-content
       .modal-header
         h2.modal-title.w-100.text-center プライバシーポリシー
         button.btn-close aria-label="Close" data-bs-dismiss="modal" type="button" style='padding: 1em;'
       .modal-body
-        h3 第1条（個人情報）
-        p 「個人情報」とは，個人情報保護法にいう「個人情報」を指すものとし，生存する個人に関する情報であって，当該情報に含まれる氏名，生年月日，住所，電話番号，連絡先その他の記述等により特定の個人を識別できる情報及び容貌，指紋，声紋にかかるデータ，及び健康保険証の保険者番号などの当該情報単体から特定の個人を識別できる情報（個人識別情報）を指します。
-        br/
+        p サイト運営者（以下「当方」と言います）は、本サイト上で提供するサービス（以下「本サービス」と言います）における、ユーザーについての個人情報を含む利用者情報の取扱いについて、以下の通りプライバシーポリシー（以下「ポリシー」と言います）を定めます。
+        br
 
-        h3 第2条（個人情報の収集方法）
-        p 運営者は，ユーザーが利用登録をする際に氏名，生年月日，住所，電話番号，メールアドレス，銀行口座番号，クレジットカード番号，運転免許証番号などの個人情報をお尋ねすることがあります。また，ユーザーと提携先などとの間でなされたユーザーの個人情報を含む取引記録や決済に関する情報を,運営者の提携先（情報提供元，広告主，広告配信先などを含みます。以下，｢提携先｣といいます。）などから収集することがあります。
-        br/
-
-        h3 第3条（個人情報を収集・利用する目的）
-        p 運営者が個人情報を収集・利用する目的は，以下のとおりです。
+        h3 収集する利用者情報及び収集情報
+        p 本ポリシーにおいて、「利用者情報」とは、ユーザーの識別に係る情報、通信サービス上の行動履歴、その他ユーザーまたはユーザーの端末に関連して生成または蓄積された情報であって、
+        p 本ポリシーに基づき当方が収集するものを意味するものとします。本サービスにおいて当方が収集する利用者情報は、その収集方法に応じて、以下のようなものとなります。
         ol
-          li 本サービスの提供・運営のため
-          li ユーザーからのお問い合わせに回答するため（本人確認を行うことを含む）
-          li ユーザーが利用中のサービスの新機能，更新情報，キャンペーン等及び運営者が提供する他のサービスの案内のメールを送付するため
-          li メンテナンス，重要なお知らせなど必要に応じたご連絡のため
-          li 利用規約に違反したユーザーや，不正・不当な目的でサービスを利用しようとするユーザーの特定をし，ご利用をお断りするため
-          li ユーザーにご自身の登録情報の閲覧や変更，削除，ご利用状況の閲覧を行っていただくため
-          li 有料サービスにおいて，ユーザーに利用料金を請求するため
-          li 上記の利用目的に付随する目的
-        br/
+          li リファラ
+          li IPアドレス
+          li サーバーアクセスログに関する情報
+          li Cookie
+          li 本サービスが提供する各種ツールの入力情報
+        br
 
-        h3 第4条（利用目的の変更）
+        h3 個人情報の利用目的
+        p 本サービスのサービス提供にかかわる利用者情報の具体的な利用目的は以下です。
         ol
-          li 運営者は，利用目的が変更前と関連性を有すると合理的に認められる場合に限り，個人情報の利用目的を変更するものとします。
-          li 利用目的の変更を行った場合には，変更後の目的について，運営者所定の方法により，ユーザーに通知し，または本ウェブサイト上に公表するものとします。
-        br/
+          li ユーザーのトラフィック測定及び行動測定のため
+          li 広告の配信、表示及び効果測定のため
+          li 本サービスが提供する各種ツールの品質向上のため
+        br
 
-        h3 第5条（個人情報の第三者提供）
-        ol
-          li 運営者は，次に掲げる場合を除いて，あらかじめユーザーの同意を得ることなく，第三者に個人情報を提供することはありません。ただし，個人情報保護法その他の法令で認められる場合を除きます。
-          ol type='I'
-            li 人の生命，身体または財産の保護のために必要がある場合であって，本人の同意を得ることが困難であるとき
-            li 公衆衛生の向上または児童の健全な育成の推進のために特に必要がある場合であって，本人の同意を得ることが困難であるとき
-            li 国の機関もしくは地方公共団体またはその委託を受けた者が法令の定める事務を遂行することに対して協力する必要がある場合であって，本人の同意を得ることにより当該事務の遂行に支障を及ぼすおそれがあるとき
-            li 予め次の事項を告知あるいは公表し，かつ運営者が個人情報保護委員会に届出をしたとき
-            ol type='i'
-              li 利用目的に第三者への提供を含むこと
-              li 第三者に提供されるデータの項目
-              li 第三者への提供の手段または方法
-              li 本人の求めに応じて個人情報の第三者への提供を停止すること
-              li 本人の求めを受け付ける方法
-          li 前項の定めにかかわらず，次に掲げる場合には，当該情報の提供先は第三者に該当しないものとします。
-          ol type='i'
-            li 運営者が利用目的の達成に必要な範囲内において個人情報の取扱いの全部または一部を委託する場合
-            li 合併その他の事由による事業の承継に伴って個人情報が提供される場合
-            li 個人情報を特定の者との間で共同して利用する場合であって，その旨並びに共同して利用される個人情報の項目，共同して利用する者の範囲，利用する者の利用目的および当該個人情報の管理について責任を有する者の氏名または名称について，あらかじめ本人に通知し，または本人が容易に知り得る状態に置いた場合
-        br/
+        h3 Cookieについて
+        p 当方では、操作性と利便性を向上するために「Cookie」を利用しています。これらはユーザーがサイトに再度訪問された際、より便利にサイトを閲覧していただくためのものであり、個人のプライバシーを侵害するものではなく、コンピューターへ悪影響を及ぼすこともありません。ユーザーは、ご自身のブラウザの設定を変更することにより、Cookieが送信されてきた時、事前にそのCookieを受け取るかどうか選択することができます。
+        br
 
-        h3 第6条（個人情報の開示）
-        ol
-          li 運営者は，本人から個人情報の開示を求められたときは，本人に対し，遅滞なくこれを開示します。ただし，開示することにより次のいずれかに該当する場合は，その全部または一部を開示しないこともあり，開示しない決定をした場合には，その旨を遅滞なく通知します。なお，個人情報の開示に際しては，1件あたり1,000円の手数料を申し受けます。
-          ol style='i'
-            li 本人または第三者の生命，身体，財産その他の権利利益を害するおそれがある場合
-            li 運営者の業務の適正な実施に著しい支障を及ぼすおそれがある場合
-            li その他法令に違反することとなる場合
-          li 前項の定めにかかわらず，履歴情報および特性情報などの個人情報以外の情報については，原則として開示いたしません。
-        br/
+        h3 Googleアナリティクス・LogRocketについて
+        p 当社では、ユーザーのサービス利用状況を理解しサイトの利便性向上を目的として「Googleアナリティクス」・「LogRocket」を使用しています。Googleアナリティクスおよびそのプライバシーポリシーについての詳細情報は、<a href=https://www.google.co.jp/policies/privacy/>こちら</a>をご確認ください。LogRocketおよびそのプライバシーポリシーについての詳細情報は、<a href=https://logrocket.com/privacy/>こちら</a>をご確認ください。
+        br
 
-        h3 第7条（個人情報の訂正および削除）
-        ol
-          li ユーザーは，運営者の保有する自己の個人情報が誤った情報である場合には，運営者が定める手続きにより，運営者に対して個人情報の訂正，追加または削除（以下，「訂正等」といいます。）を請求することができます。
-          li 運営者は，ユーザーから前項の請求を受けてその請求に応じる必要があると判断した場合には，遅滞なく，当該個人情報の訂正等を行うものとします。
-          li 運営者は，前項の規定に基づき訂正等を行った場合，または訂正等を行わない旨の決定をしたときは遅滞なく，これをユーザーに通知します。
-        br/
+        h3 プライバシーポリシーの変更
+        p 当方は、必要に応じて、本ポリシーを変更します。但し、法令上ユーザーの同意が必要となるような本ポリシーの変更を行う場合、変更後の本ポリシーは、当方所定の方法で変更に同意したユーザーに対してのみ適用されるものとします。
+        p なお、当方は、本ポリシーを変更する場合には、変更後の本ポリシーの施行時期及び内容を当サイト上での表示その他適切な方法により周知し、またはユーザーに通知します。
+        br
 
-        h3 第8条（個人情報の利用停止等）
+        h3 個人情報の第三者への開示・提供の禁止
+        p 当方は、ユーザーの個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。
         ol
-          li 運営者は，本人から，個人情報が，利用目的の範囲を超えて取り扱われているという理由，または不正の手段により取得されたものであるという理由により，その利用の停止または消去（以下，「利用停止等」といいます。）を求められた場合には，遅滞なく必要な調査を行います。
-          li 前項の調査結果に基づき，その請求に応じる必要があると判断した場合には，遅滞なく，当該個人情報の利用停止等を行います。
-          li 運営者は，前項の規定に基づき利用停止等を行った場合，または利用停止等を行わない旨の決定をしたときは，遅滞なく，これをユーザーに通知します。
-          li 前2項にかかわらず，利用停止等に多額の費用を有する場合その他利用停止等を行うことが困難な場合であって，ユーザーの権利利益を保護するために必要なこれに代わるべき措置をとれる場合は，この代替策を講じるものとします。
-        br/
-
-        h3 第9条（プライバシーポリシーの変更）
-        ol
-          li 本ポリシーの内容は，法令その他本ポリシーに別段の定めのある事項を除いて，ユーザーに通知することなく，変更することができるものとします。
-          li 運営者が別途定める場合を除いて，変更後のプライバシーポリシーは，本ウェブサイトに掲載したときから効力を生じるものとします。
-        br/
+          li ユーザーの同意がある場合
+          li 前述の定めに従って、提携先または情報収集モジュール提供者へ個人情報が提供される場合
+          li 法令に基づき開示することが必要である場合
 
       .modal-footer
         button.btn.btn-secondary data-bs-dismiss="modal" type="button"  Close
