--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -29,7 +29,7 @@
         p = f.text_field :user, autofocus: true, placeholder: '@のあとを入力'
         p
           = check_box_tag :check, '1'
-          = label_tag :check, '利用規約に同意する'
+          = label_tag :check, 'プライバシーポリシー及び利用規約に同意する'
         p = f.submit '診断する', class: 'button', id: 'submit', disable_with: '診断中...', style: 'display: none;'
 
     div
