[update]fix link_to root_path, turbolinks: false

--- a/app/views/errors/error_404.html.slim
+++ b/app/views/errors/error_404.html.slim
@@ -7,6 +7,6 @@
     | お探しのページは見つかりませんでした
 
 .return_link
-  = link_to root_path do
+  = link_to root_path, data: {"turbolinks" => false} do
     i class="fas fa-door-open"
     | トップページに戻る
