--- a/app/views/errors/error_500.html.slim
+++ b/app/views/errors/error_500.html.slim
@@ -7,6 +7,6 @@
     | アクセスしようとしたページは表示できませんでした。
 
 .return_link
-  = link_to root_path do
+  = link_to root_path, data: {"turbolinks" => false} do
     i class="fas fa-door-open"
     | トップページに戻る
