--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -39,6 +39,6 @@
 p or
 
 .return_link
-  = link_to root_path do
+  = link_to root_path, data: {"turbolinks" => false} do
     i class="fas fa-door-open"
     | トップページに戻る
