--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -53,4 +53,4 @@
           a[href="https://www.fukushihoken.metro.tokyo.lg.jp/shokuhin/kinoko/kiso.html"]
             | キノコの基礎知識
 
-
+= javascript_pack_tag 'top/index'
