[update]modified page title, use helper method

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,4 +1,5 @@
-- content_for(:title, 'きのこネガティブ診断 -あなたのツイートのネガティブ度を診断します！-')
+- content_for(:title, 'あなたのツイートのネガティブ度を診断します！')
+/ - content_for(:image_url, full_url("javascript/images/shirotamagotengutake.png"))
 
 .container
   .balloons
