Revert "ページタイトルをhelperメソッドを使って管理するように変更"

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -1,5 +1,4 @@
-- content_for(:title, 'あなたのツイートのネガティブ度を診断します！')
-/ - content_for(:image_url, full_url("javascript/images/shirotamagotengutake.png"))
+- content_for(:title, 'きのこネガティブ診断 -あなたのツイートのネガティブ度を診断します！-')
 
 .container
   .balloons
