--- a/app/javascript/stylesheets/top/index.scss
+++ b/app/javascript/stylesheets/top/index.scss
@@ -18,6 +18,13 @@
   }
 }
 
+.button_disabled{
+  font-size: 5em;
+  font-family: "Chalkduster", "Wawati SC", sans-serif;;
+  border-radius: 20px;
+  cursor: not-allowed;
+}
+
 .button {
   font-size: 5em;
   font-family: "Chalkduster", "Wawati SC", sans-serif;
