--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -29,7 +29,7 @@
       = form_with url: results_index_path, method: :get, local: true do |f|
         p = f.text_field :user, autofocus: true, placeholder: '@のあとを入力'
         p
-          = check_box_tag :check, '1'
+          = check_box_tag :check, checked: false
           = label_tag :check, 'プライバシーポリシー及び利用規約に同意する'
         p = f.submit '診断する', class: 'button_disabled', id: 'submit', disabled: 'disabled'
 
