--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title =yield(:title)
+    title =full_title(yield(:title))
     meta name="twitter:card" content="summary_large_image"
     meta name="twitter:site" content="@wiwiwi20d"
     meta property="og:url" content="https://kinokoshindan.herokuapp.com/"
