--- a/app/views/results/_wise_saying.html.slim
+++ b/app/views/results/_wise_saying.html.slim
@@ -1,2 +1,4 @@
-p = wise_saying.description
-p = wise_saying.person
+.wise_saying_description
+  p = wise_saying.description
+.wise_saying_person
+  p = wise_saying.person
