[update]modified wise saying person

--- a/app/views/results/_wise_saying.html.slim
+++ b/app/views/results/_wise_saying.html.slim
@@ -1,4 +1,8 @@
 .wise_saying_description
   p = wise_saying.description
 .wise_saying_person
-  p = wise_saying.person
+  p
+    i.fas.fa-child
+    |  #{wise_saying.person} 
+    i.fas.fa-child
+
