[update]modified twitter card, display the corresponding image for each page

--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -1,4 +1,5 @@
 - content_for(:title, '診断結果')
+- content_for(:image_url, full_url("javascript/images/#{@result.image}"))
 
 .result_title
   span #{@user}さんは
