--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,10 +3,10 @@ html
   head
     title =full_title(yield(:title))
     meta name="twitter:card" content="summary"
-    / meta name="twitter:site" content="@wiwiwi20d"
     meta property="og:url" content ="#{request.url}"
+    meta property="og:type" content="article"
     meta property="og:title" content =full_title(yield(:title))
-    meta property="og:description" content =full_description(yield(:description))
+    meta property="og:description" content ="#{content_for?(:description) ? yield(:description) : full_description}"
     meta property="og:image" content ="#{content_for?(:image_url) ? yield(:image_url) : full_url(image_pack_url('kakishimezi.png'))}"
     meta[name="viewport" content="width=device-width,initial-scale=1"]
     - if Rails.env.development?
