--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html
     meta property="og:description" content ="#{content_for?(:description) ? yield(:description) : full_description}"
     meta property="og:image" content ="#{content_for?(:image_url) ? yield(:image_url) : full_url(image_pack_url('kakishimezi.png'))}"
     meta[name="viewport" content="width=device-width,initial-scale=1"]
-    - if Rails.env.development?
+    - if Rails.env.production?
       = render template: 'shared/_analysis'
     = csrf_meta_tags
     = csp_meta_tag
