[update]change analysis number of data streem

--- a/app/views/shared/_analysis.html.slim
+++ b/app/views/shared/_analysis.html.slim
@@ -2,10 +2,10 @@ script crossorigin="anonymous" src="https://cdn.lr-ingest.io/LogRocket.min.js"
 javascript:
   window.LogRocket && window.LogRocket.init('tmai4r/kinoko');
 
-script async="" src="https://www.googletagmanager.com/gtag/js?id=G-5FMGPEDX64"
+script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PR79937BGN"
 javascript:
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-5FMGPEDX64');
+  gtag('config', 'G-PR79937BGN');
