--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -1,6 +1,6 @@
 - content_for(:title, '診断結果')
-- content_for(:description, "#{@account.name}は#{@result.name}タイプです！")
-- content_for(:image_url, full_url(image_pack_url(@result.image)))
+/ - content_for(:description, "#{@account.name}さんは#{@result.name}タイプです！")
+/ - content_for(:image_url, full_url(image_pack_url(@result.image)))
 
 .result_title
   span #{@user}さんは
