[update]change name from @user to @account.name

--- a/app/views/results/index.html.slim
+++ b/app/views/results/index.html.slim
@@ -3,7 +3,7 @@
 / - content_for(:image_url, full_url(image_pack_url(@result.image)))
 
 .result_title
-  span #{@user}さんは
+  span #{@account.name}さんは
   .kinoko_name
     span #{@result.name}
   span な状態です。
