[update]add kinoko balloons fadeout function

--- a/app/views/top/index.html.slim
+++ b/app/views/top/index.html.slim
@@ -2,12 +2,11 @@
 
 .container
   .balloons
-    div
-    div
-    div
-    div
-    div
-    div
+    .kinoko
+    .kinoko
+    .kinoko
+    .kinoko
+    .kinoko
 
   .container-fluid
     p.mt-5 あなたはどのきのこ？<br>きのこネガティブ診断！
