--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,9 +2,8 @@ doctype html
 html
   head
     title =full_title(yield(:title))
-    meta name="twitter:card" content="summary"
+    meta name="twitter:card" content="summary_large_image"
     meta property="og:url" content ="#{request.url}"
-    meta property="og:type" content="article"
     meta property="og:title" content =full_title(yield(:title))
     meta property="og:description" content ="#{content_for?(:description) ? yield(:description) : full_description}"
     meta property="og:image" content ="#{content_for?(:image_url) ? yield(:image_url) : full_url(image_pack_url('kakishimezi.png'))}"
